--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
+#Comment
+tempfile.txt
 .DS_Store
 .idea
+*.zip
+*.gz
+log/*.log
+log/*.log.[0-9]
+assets/photoshop/
+assets/videos/
+!assets/videos/tour_*.mp4
+
+#question: would log/archive/access.log be ignored?     -> NO 
